--- a/index.html
+++ b/index.html
@@ -1,12 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <section>
+      <nav>
+        <img class="logo" src="./HTML Practise Assets/FES.svg" alt="" />
+        <ul>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Discord">Discord</a></li>
+          <li><a href="#Contact">Contact</a></li>
+        </ul>
+      </nav>
+      <header>
+        <div class="row">
+          <div class="home__description">
+            <h1>Best place to learn front end</h1>
+            <p class="subheader">
+              Go from absolute beginner to pro with a simplified process
+            </p>
+            <button class="home__description--button">Start now</button>
+          </div>
+          <figure>
+            <img src="./HTML Practise Assets/laptop.png" alt="" />
+          </figure>
+        </div>
+      </header>
+    </section>
+    <main>
+      <section id="about">
+        <h2>About</h2>
+        <div class="row">
+          <div class="section__description">
+            <div class="section__description--wrapper">
+              <p class="section__description--para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dignissimos, vero harum aliquam sed sunt, illum delectus
+                obcaecati earum rerum tenetur, pariatur voluptates a illo
+                temporibus quod ipsa eum magnam necessitatibus!
+              </p>
+              <p class="section__description--para">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Dignissimos nobis numquam maxime hic ipsam labore enim
+                necessitatibus, doloribus omnis tempora quas iste repellendus?
+                Ipsa earum itaque laudantium esse, laboriosam rem.
+              </p>
+            </div>
+            <figure class="about__img--wrapper">
+              <img src="./HTML Practise Assets/about.jpg" alt="" />
+            </figure>
+          </div>
+        </div>
+      </section>
+      <section id="discord">
+        <h2>Discord</h2>
+        <div class="row">
+          <div class="section__description">
+            <figure class="about__img--wrapper">
+              <img src="./HTML Practise Assets/discord.png" alt="" />
+            </figure>
+            <div class="section__description--wrapper">
+              <p class="section__description--para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dignissimos, vero harum aliquam sed sunt, illum delectus
+                obcaecati earum rerum tenetur, pariatur voluptates a illo
+                temporibus quod ipsa eum magnam necessitatibus!
+              </p>
+              <p class="section__description--para">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Dignissimos nobis numquam maxime hic ipsam labore enim
+                necessitatibus, doloribus omnis tempora quas iste repellendus?
+                Ipsa earum itaque laudantium esse, laboriosam rem.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="contact">
+        <form action="">
+          <h2>Contact</h2>
+          <span>email</span>
+          <input type="email" placeholder="jane@example.com" />
+          <span>message</span>
+          <textarea
+            name="type"
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Lets get connected!"
+          ></textarea>
+        </form>
+        <div class="submit">
+          <button>Submit</button>
+        </div>
+      </section>
+      <footer>
+        <img class="footer__logo" src="./HTML Practise Assets/FES.svg" alt="">
+        <div class="footer__links">
+          <a class="footer__link" href="#about">About</a>
+          <a class="footer__link" href="#discord">Discord</a>
+          <a class="footer__link" href="#contact">Contact</a>
+          <a class="footer__link" href="">Courses</a>
+        </div>
+        <p>Copyright Frontend Simplified</p>
+      </footer>
+    </main>
+  </body>
 </html>
